Debugging the AnvilGUI library